--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -29,3 +29,23 @@ yfinance:
 # ------------------------------------------------
 finlab:
     enabled: true # 是否啟用 FinLab 模組
+
+# ------------------------------------------------
+# 財報／基本面因子（落地 BigQuery 用）
+# ------------------------------------------------
+factors:
+    factor_names: []  # 例: ["營業利益", "營業收入"]，留空則不抓因子
+    factor_table_suffix: null  # 選填，因子表名後綴，同一組 (mv, start, end, top_n) 可並存多組 (例: value, momentum)
+
+# ------------------------------------------------
+# 基準指數（回測用）
+# ------------------------------------------------
+benchmark:
+    index_ids: ["^TWII"]  # 加權指數；可加 "^TWOII" 櫃買
+
+# ------------------------------------------------
+# 回測層預設參數（手續費／稅，供 BigQuery 查詢）
+# ------------------------------------------------
+backtest_config:
+    fee_bps: 30   # 手續費 (bps)
+    tax_bps: 10   # 證交稅 (bps)
